<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the maturity predictor -->
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="#ffeeeeee">
    <TextView
    android:id="@+id/titleBar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_section3"
    android:gravity="center"
    android:background="@color/green_light"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"/>
    <ScrollView
    android:id="@+id/inputs_scroller"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titleBar">
        <LinearLayout
        android:id="@+id/inputs_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">
            <LinearLayout
            android:id="@+id/tassel_date_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
                <TextView
                android:id="@+id/tassel_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tassel_date_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"/>
                <LinearLayout
                android:id="@+id/tassel_date_picker_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                    <Button
                    android:id="@+id/tassel_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frost_date_button"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="22sp"
                    android:onClick="tasselOnClick"/>
                    <TextView
                    android:id="@+id/tassel_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="No date selected"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:id="@+id/frost_date_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
                <TextView
                android:id="@+id/frost_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frost_date_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"/>
                <LinearLayout
                android:id="@+id/frost_date_picker_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                    <Button
                    android:id="@+id/frost_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frost_date_button"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="22sp"
                    android:onClick="frostOnClick"/>
                    <TextView
                    android:id="@+id/frost_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="No date selected"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
    android:id="@+id/kernel_milk_result"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:background="#ffcccccc"
    android:layout_above="@+id/black_layer_result">
        <TextView
        android:id="@+id/kernel_milk_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kernel_milk_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"/>
        <TextView
        android:id="@+id/kernel_milk_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/black_layer_result"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:background="#ffdddddd"
    android:layout_above="@+id/bottom_layout">
        <TextView
        android:id="@+id/black_layer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black_layer_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"/>
        <TextView
        android:id="@+id/black_layer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    </LinearLayout>
    <RelativeLayout
    android:id="@+id/bottom_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="5dp"
    android:layout_alignParentBottom="true">

    </RelativeLayout>
</RelativeLayout>